点数入れた（未完成）今日は終わり！

--- a/ブラックジャック/BlackJack/BlackJack/BlackJack.csproj
+++ b/ブラックジャック/BlackJack/BlackJack/BlackJack.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Dealer.cs" />
     <Compile Include="Deck.cs" />
     <Compile Include="Game_kannri.cs" />
+    <Compile Include="Hand.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
